[project]
name = "pdf-extract"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "sparrowsl" }]
dependencies = ["pypdf2>=3.0.1"]
requires-python = ">=3.8"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = false


[tool.pdm.scripts]
dev = "python main.py"

[tool.pyright]
venvPath = "."
venv = ".venv"
